--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
   {% endif -%}
   <link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" />
   <link rel="apple-touch-icon" href="{{site.baseurl}}/static/img/logo.png" />
+  涓滴意念汇成河
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/common.css?t={{buildAt}}">
   <link rel="stylesheet" href="{{site.baseurl}}/static/css/theme-dark.css?t={{buildAt}}">
   {%- if page.layout == "mypost" %}
