--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <img class="logo" src="{{ site.baseurl }}/static/img/logo.jpg" alt="logo"/>
+  <img class="logo" src="{{ site.baseurl }}/static/img/logo.jpg" alt="logo"/>涓滴意念汇成河
   <nav class="menu">
     {% for menu in site.menu -%}
     <a href="{{ site.baseurl }}{{ menu.url }}" class="hover-underline">{{ menu.title }}</a>
