--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,13 @@
 {%- assign buildAt = site.time | date: "%Y%m%d%H%M%S" -%}
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?c4c364a3b31f8b5c5fc112839ef5599e";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 <head>
   <title>{{ page.title }}-{{ site.title }}</title>
   <meta charset="utf-8" />
