--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS</a>
   {%- comment %} 请保留主题来源，么么哒~ {% endcomment %}
-  <span>Theme By</span>
+  <span>Theme</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
   <!-- 不蒜子计数 -->
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
