--- a/static/css/post.css
+++ b/static/css/post.css
@@ -24,6 +24,7 @@
   font-weight: normal;
   font-size: 17px;
   position: relative;
+  cursor: pointer;
 }
 .page-post .post h1::before,
 .page-post .post h2::before {
@@ -65,6 +66,9 @@
 }
 .page-post ol li {
   list-style: decimal;
+}
+.page-post li > *{
+  margin: 6px 0;
 }
 .page-post img {
   display: block;
