--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,7 @@
 <span id="busuanzi_container_site_pv" >| 总访问量 <span id="busuanzi_value_site_pv"></span> 次 </span>
 <span id="busuanzi_container_site_uv" >| 总访客数 <span id="busuanzi_value_site_uv"></span> 人 </span>
 <!-- 不蒜子计数 -->	
+  <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
 </footer>
 <div id="to-top">
   <span></span>
