--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id: "JoVxvTki4cJIvSPC",ck: "JoVxvTki4cJIvSPC"})</script>
 <head>
   <title>{{ page.title }}-{{ site.title }}</title>
   <meta charset="utf-8" />
