--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,8 @@
 <span id="busuanzi_container_site_uv" >| 总访客数 <span id="busuanzi_value_site_uv"></span> 人 </span>
 <!-- 不蒜子计数 -->	
 <a href="https://www.foreverblog.cn/" target="_blank" > <img src="https://img.foreverblog.cn/logo_en_default.png" alt="" style="width:auto;height:16px;"> </a>
-<a href="https://www.foreverblog.cn/go.html" target="_blank"> <img src="https://img.foreverblog.cn/wormhole_3.gif" alt="" style="width:auto;height:32px;" title="穿梭虫洞-随机访问十年之约友链博客"></a>
-<a href="https://icp.gov.moe/?keyword=20231984" target="_blank">萌ICP备20231984号 <img src="https://icp.gov.moe/images/ico64.png"></a>
+<a href="https://www.foreverblog.cn/go.html" target="_blank"> <img src="https://img.foreverblog.cn/wormhole_3.gif" alt="" style="width:auto;height:16px;" title="穿梭虫洞-随机访问十年之约友链博客"></a>
+<a href="https://icp.gov.moe/?keyword=20231984" target="_blank">萌ICP备20231984号 <img src="https://icp.gov.moe/images/ico64.png" alt="" style="width:auto;height:16px;"></a>
 
 </footer>
 <div id="to-top">
