--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -17,6 +17,14 @@
   </div>
   {% endif %}
 </div>
+<div id="cusdis_thread"
+  data-host="https://cusdis.com"
+  data-app-id="58a256fa-4ac6-4d0a-9a4c-d57558079c75"
+  data-page-id="{{ PAGE_ID }}"
+  data-page-url="{{ PAGE_URL }}"
+  data-page-title="{{ PAGE_TITLE }}"
+></div>
+<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
 {% include footer.html -%}
 {% include script.html -%}
 </body>
