--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -18,8 +18,9 @@
   {% endif %}
 </div>
   
-  ---
+<hr />
   
+  <!-- 下面是cusdis的评论模块 -->
 <div id="cusdis_thread"
   data-host="https://cusdis.com"
   data-app-id="58a256fa-4ac6-4d0a-9a4c-d57558079c75"
