--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,10 +10,12 @@
 <span id="busuanzi_container_site_pv" >| 总访问量 <span id="busuanzi_value_site_pv"></span> 次 </span>
 <span id="busuanzi_container_site_uv" >| 总访客数 <span id="busuanzi_value_site_uv"></span> 人 </span>
 <!-- 不蒜子计数 -->	
+<center>
 <a href="https://www.foreverblog.cn/" target="_blank" > <img src="https://img.foreverblog.cn/logo_en_default.png" alt="" style="width:auto;height:16px;"> </a>
 <a href="https://www.foreverblog.cn/go.html" target="_blank"> <img src="https://img.foreverblog.cn/wormhole_3.gif" alt="" style="width:auto;height:20px;" title="穿梭虫洞-随机访问十年之约友链博客"></a>
 <a href="https://icp.gov.moe/?keyword=20231984" target="_blank">萌ICP备20231984号 <img src="https://icp.gov.moe/images/ico64.png" alt="" style="width:auto;height:20px;"></a>
-
+</center>
+  
 </footer>
 <div id="to-top">
   <span></span>
