--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -29,7 +29,8 @@
   data-page-id="{{ page.id }}"
   data-page-url="{{ site.url }}{{ page.baseurl }}{{ page.url }}"
   data-page-title="{{ page.title }}"
-  data-theme="light" // 这里是限制了cusdis模块默认浅色，不随系统变更
+  data-theme="light"   
+  <!-- 这里是限制了cusdis模块默认浅色不随系统变更 -->
 ></div>
 <script defer src="https://cusdis.com/js/cusdis.es.js"></script>
 {%- endif -%}
