--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -20,6 +20,19 @@
   <br />
   <br />
 <hr />
+ <!-- 下面是twikoo的评论模块 -->
+  <div id="tcomment"></div>
+<script src="https://cdn.jsdelivr.net/npm/twikoo@1.6.41/dist/twikoo.min.js"></script>
+<script>
+twikoo.init({
+  envId: 'https://zacom.netlify.app/.netlify/functions/twikoo', 
+  // 腾讯云环境填 envId；Vercel 环境填地址（https://xxx.vercel.app）
+  el: '#tcomment', // 容器元素
+  // region: 'ap-guangzhou', // 环境地域，默认为 ap-shanghai，腾讯云环境填 ap-shanghai 或 ap-guangzhou；Vercel 环境不填
+  // path: location.pathname, // 用于区分不同文章的自定义 js 路径，如果您的文章路径不是 location.pathname，需传此参数
+  // lang: 'zh-CN', // 用于手动设定评论区语言，支持的语言列表 https://github.com/twikoojs/twikoo/blob/main/src/client/utils/i18n/index.js
+})
+</script>
   
   <!-- 下面是cusdis的评论模块 -->
   {%- if page.id -%}
