--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -44,7 +44,7 @@ integrity="sha384-QgZlvw//W8lQwue8uv2qAszlmDJE1GzJa4dEA/tt3EEyn7VQd5BgrdZMzoCAkT
   data-host="https://cusdis.com"
   data-app-id="58a256fa-4ac6-4d0a-9a4c-d57558079c75"
   data-page-id="{{ page.id }}"
-  data-page-url="{{ site.url }}{{ page.baseurl }}{{ page.url }}"
+  data-page-url="{{ page.url }}"
   data-page-title="{{ page.title }}"
 ></div>
 <script defer src="https://cusdis.com/js/cusdis.es.js"></script>
