--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -22,7 +22,7 @@
 <hr />
  <!-- 下面是twikoo的评论模块 -->
 <div id="tcomment"></div>
-<script src="https://cdn.jsdelivr.net/npm/twikoo@1.6.41/dist/twikoo.min.js"></script>
+<script src="https://s4.zstatic.net/npm/twikoo@1.6.44/dist/twikoo.min.js" integrity="sha384-dZ/hSVfTPHuzXyECOYCetAvMd0cgqWxN5Fh+mwo86PV4GdU9xgQ/MNzh/YM/lotR" crossorigin="anonymous"></script>
 <script>
 twikoo.init({
   envId: 'https://zacom.netlify.app/.netlify/functions/twikoo', // 腾讯云环境填 envId；Vercel 环境填地址（https://xxx.vercel.app）
@@ -52,4 +52,5 @@ twikoo.init({
 {% include script.html -%}
 </body>
 </html>
+
 
